Fixed issue where heading was not showing on mobile devices

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -33,7 +33,7 @@ p {
 }
 
 @media screen and (max-width: 55rem) {
-  h1 {
+  .background-text {
     display: none;
   }
 }
